Columns overflowing each other fixed

--- a/src/app/requirement/components/requirement-table/requirements-table.component.scss
+++ b/src/app/requirement/components/requirement-table/requirements-table.component.scss
@@ -1,5 +1,5 @@
 div{
-  padding:25px;
+  margin-block: 25px;
   max-height: 800px;
 }
 
